--- a/css/styles.css
+++ b/css/styles.css
@@ -7,13 +7,29 @@ body {
 .container-fluid{
     padding: 3% 15%;
 }
+.navbar{
+    padding:0 0 4.5rem;
+}
+.navbar-brand{
+    font-size: 2.5rem;
+}
+.nav-item{
+    padding: 0 18px;
+}
+.nav-link{
+    font-size: 1.2rem;
+}
 h1 {
     font-size: 4rem;
     line-height: 1;
+    font-weight: 1000;
 }
 #title{
     background-color: #FFC107;
 }
 #title-img{
     width: 400px;
+}
+.black-text{
+    color: #343A40 !important;
 }
