--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ p{
 /*testimonials*/
 
 #testimonials{
-    padding: 7% 15%;
+    
     text-align: center;
     background-color: #FFC107;
 }
@@ -84,6 +84,9 @@ h2{
     border-radius: 50%;
     margin: 20px;
 }
+.carousel-item{
+    padding: 7% 15%;
+}
 
 /*press*/
 
@@ -95,5 +98,28 @@ h2{
 }
 .press-items{
     width: 15%;
-    margin: 20% 20% 50%;
+    margin: 20px 20px 50px;
+    filter: gray;
+    -webkit-filter: grayscale(1);
+    -webkit-transition: all .4s ease-in-out; 
+}
+.press-items:hover{
+    filter: none;
+    -webkit-filter: grayscale(0);
+    -webkit-transform: scale(1.01);
+}
+
+/*pricing*/
+
+#pricing{
+    padding: 7% 15%;
+}
+.price-btn{
+    background-color: #FFC107;
+    color: #ffffff;
+}
+.pricing-row{
+    padding: 80px 0px;
+}
+.card-item{
 }
