--- a/css/styles.css
+++ b/css/styles.css
@@ -4,6 +4,26 @@ body{
     border: 0;
     font-family: 'Roboto', sans-serif;
 }
+h1 {
+    font-size: 4.5rem;
+    line-height: 1;
+    font-weight: 1000;
+    margin-top: 20%;
+}
+h3{
+    font-weight: 600;
+}
+h2{
+    font-weight: 500;
+    font-size: 3rem;
+    line-height: 1.5;
+}
+p{
+    color: #8f8f8f;
+}
+
+/*navigation*/
+
 .container-fluid{
     padding: 3% 15%;
 } 
@@ -19,12 +39,9 @@ body{
 .nav-link{
     font-size: 1.2rem;
 }
-h1 {
-    font-size: 4.5rem;
-    line-height: 1;
-    font-weight: 1000;
-    margin-top: 20%;
-}
+
+/*Title*/
+
 #title{
     background-color: #FFC107;
     height: 110vh;
@@ -53,12 +70,6 @@ h1 {
     text-align: center;
     padding: 5%;
 }
-h3{
-    font-weight: 600;
-}
-p{
-    color: #8f8f8f;
-}
 .icon{
     color: #FFC107;
     margin-bottom: 1rem;
@@ -73,11 +84,6 @@ p{
     
     text-align: center;
     background-color: #FFC107;
-}
-h2{
-    font-weight: 500;
-    font-size: 3rem;
-    line-height: 1.5;
 }
 .testimonial-image{
     width: 10%;
@@ -120,8 +126,6 @@ h2{
 }
 .pricing-row{
     padding: 80px 0px;
-}
-.card-item{
 }
 
 /* Call to Action*/
